# biostatistics-eda

./: .gitignore  README.md  project-preview.json  pyproject.toml
assets/figures/adni/: km_survival.pptx
assets/slides/: survival.pptx
assets/tables/adni/: demo_char1.csv  demo_char2.csv  demo_char3.csv  demo_char4.csv  demo_char_mover1.csv  demo_char_mover2.csv  demo_char_mover3.csv  demographic_characteristics.xlsx  demographics_movers.xlsx  survival_CN.csv  survival_MCI.csv  survival_combined.csv
assets/tables/aric/: demographic_characteristics.xlsx
src/analysis/adni/: demo_characteristics.ipynb  lipidomics_boxplot.ipynb  lipidomics_trend.ipynb  lipidomics_tukey.ipynb  somascan_boxplot.ipynb  somascan_cluster.ipynb  somascan_pca.ipynb  somascan_tukey.ipynb  strem2_lipidomics_regression.ipynb  strem2_lipoprotein_regression.ipynb  strem2_tukey.ipynb  survival.ipynb  survival_hdl_ratio.ipynb
src/analysis/calcium/: calcium_all_sites.ipynb
src/analysis/other/: imagej_particle_results_hdl.ipynb
src/lib/: dialog.py  general.py  plotly.py  r_interface.py  stats.py
src/processing/adni/: ab4240.ipynb  bmi.ipynb  converters.ipynb  converters_to_ad.ipynb  demographics.ipynb  demographics_biomarkers.ipynb  demographics_tau.ipynb  lipidomics.ipynb  lipoprotein.ipynb  somascan.ipynb  strem2.ipynb
src/processing/aric/: pilot.ipynb  pilot_eligible.ipynb
src/processing/other/: davidson.ipynb
